# windows-rtos-style-timer-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/trace_samples/: sample_application_latest.txt  server_console_latest.txt  tests_latest.txt  tests_server_console_latest.txt
include/: vdr_timer_manager_api.h  vdr_timer_manager_protocol.h
samples/sample_client/: sample_client.c
src/client/: vdr_timer_manager_api.c
src/server/: vdrapkin_timer_manager_server.c
src/timer_core/: vdr_timer_core.c  vdr_timer_core.h
tests/integration/: client_api_integration_tests.c
tests/robustness/: robustness_tests.c
tests/timer_core/: timer_core_tests.c
